--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "224d68a1-3b52-42ff-82a3-f76747bbd7d6"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
